clusters/games/minecraft/flat/statefulset-flat.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    run: flat
  name: flat
  namespace: mc-flat
spec:
  replicas: 1
  selector:
    matchLabels:
      run: flat
  template:
    metadata:
      labels:
        run: flat
    spec:
      containers:
        - name: server
          image: harbor.lab.brianragazzi.com/cache/itzg/minecraft-server:latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - mc-health
            failureThreshold: 5
            initialDelaySeconds: 90
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 8123
              protocol: TCP
            - containerPort: 25575
              protocol: TCP
          resources:
            requests:
              memory: "4Gi"
              cpu: "0.2"
            limits:
              memory: "6Gi"
              cpu: "2"
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - name: server-data
              mountPath: /data
            - name: plugins
              mountPath: /plugins
              subPath: flat/
              readOnly: true
            - name: configfiles
              mountPath: /config
        - name: backup
          image: harbor.lab.brianragazzi.com/cache/itzg/mc-backup
          imagePullPolicy: Always
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: server-data
              readOnly: true
            - mountPath: /backups
              name: mc-backups
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 501
        runAsGroup: 501
        runAsUser: 501
      terminationGracePeriodSeconds: 30
      volumes:
        - name: server-data
          persistentVolumeClaim:
            claimName: pvc-flat-data
        - name: mc-backups
          nfs:
            server: 192.168.1.41
            path: /nfs/kubevol/mc-backups/flat
            readOnly: false
        - name: configfiles
          configMap:
             name: flat-configfiles
        - name: plugins
          nfs:
            path: /nfs/kubevol/mc-plugins
            server: 192.168.1.41
            readOnly: true
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
