clusters/games/minecraft/flat/service-flat.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: flat
  name: flat
  namespace: mc-flat
spec:
  ports:
    - name: minecraft
      port: 25565
      protocol: TCP
      targetPort: 25565
    - name: prometheus
      port: 9940
      protocol: TCP
      targetPort: 9940
    - name: dynmap
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    run: flat
  type: LoadBalancer
